@@ -3,6 +3,10 @@ Changelog
 
 10.7.dev0 - (unreleased)
 ------------------------
+* Bug fix: prevent conversion error due to permission if there is a need to
+  delete the images that should no longer be there such as in the cases where
+  another figure is replacing the current figure
+  [ichimdav refs #68012]
 
 10.6 - (2015-12-11)
 -------------------
